@@ -1,6 +1,7 @@
 2010-02-23
 	* Various bugfixes: journal name with ' can be handled correctly.
 	* add icon to annotation widget.
+	* attribute should not contain ' any more.
 	
 2010-02-22
 	* Various bugfixes of code name with ' in coding Tab.
